// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should parse search with no empty value 1`] = `
Object {
  "options": Object {},
}
`;

exports[`should parse search with custom range 1`] = `
Object {
  "filters": Array [
    Object {
      "id": undefined,
      "type": "Domain",
      "value": "test.com",
    },
    Object {
      "id": "123",
      "type": "Subaccount",
      "value": "test",
    },
  ],
  "options": Object {
    "from": 2017-11-03T14:43:00.000Z,
    "metrics": Array [
      "count-something",
    ],
    "relativeRange": "custom",
    "to": 2017-11-04T14:43:00.000Z,
  },
}
`;

exports[`should parse search with missing range 1`] = `
Object {
  "filters": Array [
    Object {
      "id": undefined,
      "type": "Domain",
      "value": "test.com",
    },
    Object {
      "id": "123",
      "type": "Subaccount",
      "value": "test",
    },
  ],
  "options": Object {
    "from": 2017-11-03T14:43:00.000Z,
    "metrics": Array [
      "count-something",
    ],
    "to": 2017-11-04T14:43:00.000Z,
  },
}
`;

exports[`should parse search with relative range 1`] = `
Object {
  "filters": Array [
    Object {
      "id": undefined,
      "type": "Domain",
      "value": "test.com",
    },
    Object {
      "id": "123",
      "type": "Subaccount",
      "value": "test",
    },
  ],
  "options": Object {
    "from": "relative-from",
    "metrics": Array [
      "count-something",
    ],
    "relativeRange": "relative-range",
    "to": "relative-to",
  },
}
`;
